syntax = "proto3";

package faltung.house.api.trait;

option go_package = "github.com/rmrobinson/house/api/trait";

// OnOff describes the part of a device which can be turned on or off.
message OnOff {
  message Attributes {
    // If true, control of the property is possible.
    // If false, control is not allowed and the property is read-only.
    bool can_control = 1;
  }
  message State {
    // If true, the device should be considered as 'on'
    bool is_on = 1;
  }

  Attributes attributes = 1;
  State state = 2;
}
